<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.finalproject.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_home_to_ride_details"
            app:destination="@id/rideDetailsFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim">
            <argument
                android:name="rideId"
                app:argType="long" />
        </action>
    </fragment>

    <fragment
        android:id="@+id/nav_dashboard"
        android:name="com.example.finalproject.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/nav_history"
        android:name="com.example.finalproject.ui.history.HistoryFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_history">
        <action
            android:id="@+id/action_history_to_ride_details"
            app:destination="@id/rideDetailsFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@id/nav_history"
            app:popUpToInclusive="false">
            <argument
                android:name="rideId"
                app:argType="long" />
        </action>
    </fragment>

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.finalproject.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/rideDetailsFragment"
        android:name="com.example.finalproject.ui.details.RideDetailsFragment"
        android:label="Ride Details"
        tools:layout="@layout/fragment_ride_details">
        <argument
            android:name="rideId"
            app:argType="long" />
        <action
            android:id="@+id/action_ride_details_to_history"
            app:destination="@id/nav_history"
            app:popUpTo="@id/nav_history"
            app:popUpToInclusive="false" />
    </fragment>

</navigation> 